--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
       "source": "/(.*)",
       "headers": [
         {
+          "key": "X-Frame-Options",
+          "value": "DENY"
+        },
+        {
           "key": "Access-Control-Allow-Origin",
           "value": "https://belladent.vercel.app"
         },
